force-app/main/default/objects/AHA_ERL_Code__c/AHA_ERL_Code__c.object-meta.xml
<CustomObject>
    <label>AHA-ERL Code</label>
    <nameField>
        <displayFormat>AHA-ERL-SOR-{00000}</displayFormat>
        <label>AHA-ERL SOR Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AHA-ERL SOR Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>