force-app/main/default/objects/AHA_ERL_Code__c/fields/DefaultLocation__c.field-meta.xml
<CustomField>
    <fullName>DefaultLocation__c</fullName>
    <inlineHelpText>Location Code</inlineHelpText>
    <label>Default Location</label>
    <length>10</length>
    <type>Text</type>
</CustomField>