force-app/main/default/objects/AHA_ERL_Code__c/fields/DefaultPriority__c.field-meta.xml
<CustomField>
    <fullName>DefaultPriority__c</fullName>
    <label>Default Priority</label>
    <length>10</length>
    <type>Text</type>
</CustomField>