force-app/main/default/objects/AHA_ERL_Code__c/fields/DefaultQuantity__c.field-meta.xml
<CustomField>
    <fullName>DefaultQuantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Default Quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>