force-app/main/default/objects/AHA_ERL_Code__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Messages are used for Message Sor Code record types, this message will be displayed on the SOR selector instead of a selectable SOR.</description>
    <inlineHelpText>Messages are used for Message Sor Code record types, this message will be displayed on the SOR selector instead of a selectable SOR.</inlineHelpText>
    <label>Message</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>