force-app/main/default/objects/AHA_ERL_Code__c/fields/SORCodeText__c.field-meta.xml
<CustomField>
    <fullName>SORCodeText__c</fullName>
    <externalId>true</externalId>
    <label>SOR Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>