force-app/main/default/objects/AHA_ERL_Code__c/fields/SORDescriptionText__c.field-meta.xml
<CustomField>
    <fullName>SORDescriptionText__c</fullName>
    <label>SOR Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>