force-app/main/default/objects/AHA_ERL_Code__c/fields/SORFullDescriptionLongText__c.field-meta.xml
<CustomField>
    <fullName>SORFullDescriptionLongText__c</fullName>
    <label>SOR Full Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>