force-app/main/default/objects/AHA_ERL_Code__c/fields/SORHeadingText__c.field-meta.xml
<CustomField>
    <fullName>SORHeadingText__c</fullName>
    <label>SOR Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>