force-app/main/default/objects/AHA_ERL_Code__c/fields/SORRateCurrency__c.field-meta.xml
<CustomField>
    <fullName>SORRateCurrency__c</fullName>
    <label>SOR Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>