force-app/main/default/objects/AHA_ERL_Code__c/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <label>Sub-Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>