force-app/main/default/objects/AHA_ERL_Code__c/fields/SubCategoryPicklist__c.field-meta.xml
<CustomField>
    <fullName>SubCategoryPicklist__c</fullName>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CategoryPicklist__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>BATHS</fullName>
            </value>
            <value>
                <fullName>BASINS</fullName>
            </value>
            <value>
                <fullName>WC</fullName>
            </value>
            <value>
                <fullName>SHOWERS</fullName>
            </value>
            <value>
                <fullName>WATER</fullName>
            </value>
            <value>
                <fullName>HOT WATER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>