force-app/main/default/objects/AHA_ERL_Code__c/recordTypes/Message.recordType-meta.xml
<RecordType>
    <fullName>Message</fullName>
    <active>true</active>
    <description>Messages are used to display a message instead of a SOR.</description>
    <label>Message</label>
</RecordType>