force-app/main/default/objects/AHA_ERL_Code__c/recordTypes/SORCode.recordType-meta.xml
<RecordType>
    <fullName>SORCode</fullName>
    <active>true</active>
    <label>SOR Code</label>
</RecordType>