force-app/main/default/objects/AHA_ERL_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>SORCodeText__c</columns>
    <columns>SORDescriptionText__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>