force-app/main/default/objects/AHA_ERL_Code__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>SORCodeText__c</columns>
    <columns>SORDescriptionText__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AHA_ERL_Code__c.Message</value>
    </filters>
    <label>All Messages</label>
</ListView>